fix: update test configurations and scripts for 100,000 row CSV import to Postgres

--- a/cmd/sling/tests/replications/r.65.large_csv_postgres_parquet.part1.yaml
+++ b/cmd/sling/tests/replications/r.65.large_csv_postgres_parquet.part1.yaml
@@ -19,8 +19,8 @@ hooks:
       into: result
 
     - type: check
-      check: int_parse(store.result[0].count) == 1000000
-      success_message: "✓ All 1,000,000 CSV records imported successfully into Postgres"
+      check: int_parse(store.result[0].count) == 100000
+      success_message: "✓ All 100,000 CSV records imported successfully into Postgres"
 
 streams:
   file:///tmp/sling-test-large-data/stock_movement.csv:
