--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1045,16 +1045,16 @@
 
 # Test large CSV to Postgres to Parquet (WriteDataflowReadyViaDuckDB hang test)
 - id: 127
-  name: Test large CSV import to Postgres (1M rows)
+  name: Test large CSV import to Postgres (100k rows)
   run: |
     sling run -d -r cmd/sling/tests/replications/r.65.large_csv_postgres_parquet.part1.yaml
     sling run -d -r cmd/sling/tests/replications/r.65.large_csv_postgres_parquet.part2.yaml
   conns:
     - postgres
   output_contains:
-    - 'CSV file created with 1,000,000'
+    - 'CSV file created with 100,000'
     - 'execution succeeded'
-    - '✓ All 1,000,000 CSV records imported successfully into Postgres'
+    - '✓ All 100,000 CSV records imported successfully into Postgres'
 
 # Test MSSQL to Databricks with uppercase table name (Issue #664)
 - id: 128
