feat(replication): Add pre_merge hook for setting replica identity and enhance error messaging for PG replication

--- a/cmd/sling/tests/replications/r.57.run_state_test.yaml
+++ b/cmd/sling/tests/replications/r.57.run_state_test.yaml
@@ -152,6 +152,10 @@ streams:
   public.run_state_test:
     object: public.run_state_test2
     hooks:
+      pre_merge:
+        - type: query
+          connection: '{target.name}'
+          query: alter table {object.temp_full_name} replica identity full
       post:
         - type: log
           message: |
