fix(replication): Add target_options for table DDL in run_state_test to set replica identity

--- a/cmd/sling/tests/replications/r.57.run_state_test.yaml
+++ b/cmd/sling/tests/replications/r.57.run_state_test.yaml
@@ -151,11 +151,11 @@ hooks:
 streams:
   public.run_state_test:
     object: public.run_state_test2
+    target_options:
+      table_ddl: |
+        create table {object.full_name} ({col_types});
+        alter table {object.full_name} replica identity full
     hooks:
-      pre_merge:
-        - type: query
-          connection: '{target.name}'
-          query: alter table {object.temp_full_name} replica identity full
       post:
         - type: log
           message: |
