fix(sling_platform): update iteration source from state to context for connections

--- a/cmd/sling/tests/replications/apis/test_spec/sling_platform.yaml
+++ b/cmd/sling/tests/replications/apis/test_spec/sling_platform.yaml
@@ -14,7 +14,7 @@ endpoints:
   connections:
 
     iterate:
-      over: "state.replication_store.records"
+      over: "context.store.records"
       into: "state.test_record"
       
     request:
