fix(pipeline): correct replication step configuration and ensure environment variable is set

--- a/cmd/sling/tests/pipelines/p.01.yaml
+++ b/cmd/sling/tests/pipelines/p.01.yaml
@@ -4,9 +4,12 @@ steps:
 
   - type: replication
     path: cmd/sling/tests/replications/r.19.yaml
+    env:
+      RESET: 'true'
 
-  - type: replication
-    config: 
+  - replication: file://cmd/sling/tests/replications/r.19.yaml
+
+  - replication: 
       source: postgres
       target: aws_s3
       streams:
