--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1101,3 +1101,14 @@
     - 'Starting validation suite'
     - '=== Test 6: Conditional routine execution ==='
     - '=== All routine tests completed successfully ==='
+
+- id: 132
+  name: Test hooks in defaults with wildcards
+  run: 'sling run -d -r cmd/sling/tests/replications/r.68.defaults_hooks_wildcard.yaml'
+  output_contains:
+    - 'PRE HOOK EXECUTED for stream: cmd/sling/tests/files/test2.csv'
+    - 'POST HOOK EXECUTED for stream: cmd/sling/tests/files/test2.csv'
+    - 'PRE HOOK EXECUTED for stream: cmd/sling/tests/files/test1.1.csv'
+    - 'POST HOOK EXECUTED for stream: cmd/sling/tests/files/test1.1.csv'
+    - 'PRE HOOK EXECUTED for stream: cmd/sling/tests/files/test1.2.csv'
+    - 'POST HOOK EXECUTED for stream: cmd/sling/tests/files/test1.2.csv'
