feat(tests): add test for {fields} placeholder with select parameter in replication

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1195,3 +1195,9 @@
     - '✅ SUCCESS: Boolean values correctly converted to strings in ClickHouse'
     - '✓ clickhouse_test2.is_active has boolean type'
     - '✅ SUCCESS: Boolean values correctly stored as boolean type in clickhouse_test2'
+
+- id: 141
+  name: Test {fields} placeholder with select parameter (issue #669)
+  run: 'sling run -d -r cmd/sling/tests/replications/r.75.fields_placeholder_select.yaml'
+  output_contains:
+    - SELECT "id", "name"
