--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1180,14 +1180,14 @@
     - '✅ SUCCESS: Wildcard with disabled stream works correctly'
 
 - id: 139
-  name: Test DuckDB reading Parquet with large strings from S3 (issue #668)
+  name: 'Test DuckDB reading Parquet with large strings from S3 (issue #668)'
   run: 'sling run -d -r cmd/sling/tests/replications/r.73.duckdb_large_parquet.yaml'
   output_contains:
     - '✓ All 100 rows with large strings loaded successfully'
     - '✓ Large string values preserved (exactly 65,330 chars)'
 
 - id: 140
-  name: Test ClickHouse boolean to string conversion (issue #626)
+  name: 'Test ClickHouse boolean to string conversion (issue #626)'
   run: |
     TARGET=clickhouse sling run -d -r cmd/sling/tests/replications/r.74.clickhouse_bool_string.yaml
     TARGET=clickhouse_top sling run -d -r cmd/sling/tests/replications/r.74.clickhouse_bool_string.yaml
@@ -1197,7 +1197,14 @@
     - '✅ SUCCESS: Boolean values correctly stored as boolean type in clickhouse_test2'
 
 - id: 141
-  name: Test {fields} placeholder with select parameter (issue #669)
+  name: 'Test {fields} placeholder with select parameter (issue #669)'
   run: 'sling run -d -r cmd/sling/tests/replications/r.75.fields_placeholder_select.yaml'
   output_contains:
     - SELECT "id", "name"
+
+- id: 142
+  name: 'Test columns casting to string for DDL (issue #651)'
+  run: 'sling run -d -r cmd/sling/tests/replications/r.32.columns_cast_to_string.yaml'
+  output_contains:
+    - 'Column type for date_col: character varying'
+    - casting column 'date_col' as 'string'
