use Columns to define the geometry column and use default 'geometry' col name

--- a/cmd/sling/tests/replications/r.68.postgres_geom_column_definition_geojson.yaml
+++ b/cmd/sling/tests/replications/r.68.postgres_geom_column_definition_geojson.yaml
@@ -5,8 +5,8 @@ defaults:
   mode: full-refresh
   target_options:
     format: geojson
-  source_options:
-    geometry_column: geom
+  columns:
+    geom: geometry
 
 streams:
   test_geojson_inline:
