--- a/cmd/sling/tests/replications/r.68.defaults_hooks_wildcard.yaml
+++ b/cmd/sling/tests/replications/r.68.defaults_hooks_wildcard.yaml
@@ -19,7 +19,7 @@ streams:
   # Wildcard pattern - should match test1.1.csv and test1.2.csv
   # BUG: hooks in defaults will NOT execute for these wildcard-matched streams
   cmd/sling/tests/files/test1.*.csv:
-    object: /tmp/wildcard_{stream_file_name}
+    object: /tmp/wildcard_{stream.file_name}
 
   # Exact stream name - hooks in defaults WILL execute for this
   cmd/sling/tests/files/test2.csv:
