feat: Enhance evaluator integration for dynamic SQL rendering
- Introduced an evaluator to handle dynamic variable rendering in SQL queries and object names across the configuration.
- Updated the Prepare method to utilize the evaluator for rendering SQL clauses, pre/post SQL, and object names.
- Modified StreamToTaskConfig to accept environment variables for replication tasks.
- Added comprehensive tests for replication scenarios, including variable expansion and error handling for missing configurations.
- Improved the handling of nested variables and patterns in object names and SQL queries.

--- a/cmd/sling/tests/suite.cli.yaml
+++ b/cmd/sling/tests/suite.cli.yaml
@@ -1109,6 +1109,7 @@
   run: 'sling run -d -r cmd/sling/tests/replications/r.68.defaults_hooks_wildcard.yaml'
   output_contains:
     - 'wrote 14 rows to file:///tmp/wildcard_test1_upsert'
+    - 'wrote 1000 rows to file:///tmp/exact_test2.csv'
     - 'PRE HOOK EXECUTED for stream: cmd/sling/tests/files/test2.csv'
     - 'POST HOOK EXECUTED for stream: cmd/sling/tests/files/test2.csv'
     - 'PRE HOOK EXECUTED for stream: cmd/sling/tests/files/test1.1.csv'
